--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 
-    <iframe id="vp1uw7ca" title="Video Player" width=100% height=100% frameborder="0"
+    <iframe id="vp1uw7ca" title="Video Player"  frameborder="0"
         src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1637053304&f=uw7caGAocpLzkvKdISisKA&d=0&m=p&r=360p+480p+720p&volume=100&start_res=720p&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options="
         allowfullscreen></iframe>
 
