--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 100%; /* 1:1 Aspect Ratio */
+}
 
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+</style>
+</head>
 <body>
 
+<h2>Responsive Iframe</h2>
+<h3>Maintain Aspect Ratio 1:1</h3>
+<p>Resize the window to see the effect.</p>
 
-    <iframe id="vp1uw7ca" title="Video Player" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" frameborder="0"
-        src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1637053304&f=uw7caGAocpLzkvKdISisKA&d=0&m=p&r=360p+480p+720p&volume=100&start_res=720p&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options="
-        allowfullscreen></iframe>
+<div class="container"> 
+  <iframe class="responsive-iframe" src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1637053304&f=uw7caGAocpLzkvKdISisKA&d=0&m=p&r=360p+480p+720p&volume=100&start_res=720p&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options="></iframe>
+</div>
 
 </body>
-
 </html>
